digital-membership/deployment-dm-noa-re.yaml
# Source: dm.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dm-noa-re
  labels:
    app: dm-noa-re
  namespace: digital-membership
  annotations:
    noa.re/deploy-id: 70abf9939f5c15c8
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dm-noa-re
  template:
    metadata:
      labels:
        app: dm-noa-re
      annotations:
        checksum/config: 42fc2477f931d66667de5d015a9e6302abbd91404d5dfa567c82c1b6c2a7c805
    spec:
      containers:
      - name: dm-noa-re
        image: repo.noa.re/digital-membership:0.1.0-76a1c01e
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: dm-noa-re-config
          mountPath: /config
        - name: keys
          mountPath: /keys
      volumes:
      - name: dm-noa-re-config
        configMap:
          name: dm-noa-re-config
      - name: keys
        secret:
          secretName: keys
